# mplus_checker

./: .gitignore  Dockerfile  compose.yaml  main.py  pyproject.toml  test.json
static/: script.js  style.css
static/css/: style.css
static/js/: script.js
templates/: character.html  error.html  index.html
